--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,6 @@ lazy-object-proxy==1.6.0
 lxml==4.6.3
 MarkupSafe==2.0.1
 matplotlib==3.3.4
-mccabe==0.6.1
-mecab==0.996.3
 mysqlclient==2.0.3
 nltk==3.6.2
 numpy==1.19.5
@@ -64,3 +62,5 @@ wrapt==1.12.1
 xlrd==2.0.1
 XlsxWriter==3.0.1
 zipp==3.5.0
+djangorestframework==3.12.4
+googletrans==3.1.0a0
